macro(ADD_EXAMPLE_BINARY file) 
    if (ANDROID)
        add_library(${TARGET_NAME} SHARED ${EXAMPLE})
        add_dependencies(${TARGET_NAME} app-glue)
        target_link_libraries(${TARGET_NAME} app-glue)
    else()
        add_executable(${TARGET_NAME} ${EXAMPLE})
    endif()
    if (("${TARGET_NAME}" STREQUAL "context") OR ("${TARGET_NAME}" STREQUAL "swapchain") OR ("${TARGET_NAME}" STREQUAL "triangle"))
        set_target_properties(${TARGET_NAME} PROPERTIES FOLDER "examples/init")
    else()
        set_target_properties(${TARGET_NAME} PROPERTIES FOLDER "examples")
    endif()
endmacro()

macro(BUILD_EXAMPLES)
    foreach(_FOLDER_NAME ${ARGN})
        file(GLOB EXAMPLES ${_FOLDER_NAME}/*.cpp)
        foreach(EXAMPLE ${EXAMPLES})
            get_filename_component(TARGET_NAME ${EXAMPLE} NAME_WE)
            add_example_binary(${EXAMPLE})
            add_dependencies(${TARGET_NAME} base)
            target_include_directories(${TARGET_NAME} PUBLIC base)
            target_link_libraries(${TARGET_NAME} base)
            target_link_libraries(${TARGET_NAME} ${CMAKE_THREAD_LIBS_INIT})
        endforeach()
    endforeach()
endmacro()


MACRO(SUBDIRLIST result curdir)
  FILE(GLOB children RELATIVE ${curdir} ${curdir}/*)
  SET(dirlist "")
  FOREACH(child ${children})
    IF(IS_DIRECTORY ${curdir}/${child})
        LIST(APPEND dirlist ${child})
    ENDIF()
  ENDFOREACH()
  SET(${result} ${dirlist})
ENDMACRO()

subdirlist(SUBDIRS ${CMAKE_CURRENT_SOURCE_DIR})
build_examples(${SUBDIRS})

if (TARGET vr_openxr)
    set(TARGET_NAME vr_openxr)
    set_target_properties(${TARGET_NAME} PROPERTIES FOLDER "examples/vr")
    target_compile_definitions(${TARGET_NAME} PRIVATE XR_USE_GRAPHICS_API_VULKAN)
    target_openxr()
endif()
