macro(ADD_EXAMPLE_BINARY) 
    if (ANDROID)
        add_library(${TARGET_NAME} SHARED)
        add_dependencies(${TARGET_NAME} app-glue)
        target_link_libraries(${TARGET_NAME} app-glue)
    else()
    endif()
endmacro()

macro(BUILD_EXAMPLES)
    foreach(_FOLDER_NAME ${ARGN})
		file(GLOB EXAMPLE_SOURCES ${_FOLDER_NAME}/*.cpp)
		#message("Folder ${_FOLDER_NAME}")
		#message("Sources ${EXAMPLE_SOURCES}")
		
		set(TARGET_NAME ${_FOLDER_NAME})
		add_executable(${TARGET_NAME})
        target_compile_definitions(${TARGET_NAME} PRIVATE VMA_IMPLEMENTATION)
		set_target_properties(${TARGET_NAME} PROPERTIES FOLDER "examples")
		target_sources(${TARGET_NAME} PRIVATE ${EXAMPLE_SOURCES})
		target_link_libraries(${TARGET_NAME} base)
    endforeach()
endmacro()


MACRO(SUBDIRLIST result curdir)
  FILE(GLOB children RELATIVE ${curdir} ${curdir}/*)
  SET(dirlist "")
  FOREACH(child ${children})
    IF(IS_DIRECTORY ${curdir}/${child})
        LIST(APPEND dirlist ${child})
    ENDIF()
  ENDFOREACH()
  SET(${result} ${dirlist})
ENDMACRO()

subdirlist(SUBDIRS ${CMAKE_CURRENT_SOURCE_DIR})
build_examples(${SUBDIRS})

